Compiler/tests/bad/Structs/03_structs.rs
struct Boolean{
    v: i32
}

fn main(){
    let test : Boolean = Boolean{v:true};

    println!(test.v);

    return;
}
